--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#ED2020</color>
+    <color name="green2">#388E3C</color>
     <color name="green">#1DF428</color>
 
 </resources>
